<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jian.simplefit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.jian.simplefit.ui.exercise.ExerciseListFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_exercise_list" />

    <fragment
        android:id="@+id/navigation_routines"
        android:name="com.jian.simplefit.ui.routine.RoutineListFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_routine_list" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.jian.simplefit.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.jian.simplefit.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jian.simplefit.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.jian.simplefit.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>